[gd_scene load_steps=16 format=2]

[ext_resource path="res://source/interface/game/GameUI.gd" type="Script" id=1]
[ext_resource path="res://source/interface/misc/Selector.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/interface/game/LocationUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/interface/game/UnitUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://source/interface/game/combat/CombatDialogue.tscn" type="PackedScene" id=5]
[ext_resource path="res://graphics/images/interface/darken.png" type="Texture" id=6]
[ext_resource path="res://source/interface/game/SideUI.tscn" type="PackedScene" id=7]
[ext_resource path="res://source/interface/game/recruit/RecruitDialogue.tscn" type="PackedScene" id=8]
[ext_resource path="res://source/interface/game/PathUI.gd" type="Script" id=9]
[ext_resource path="res://source/interface/game/hud/ToDWidget.tscn" type="PackedScene" id=10]
[ext_resource path="res://source/interface/game/action/ActionDialogue.tscn" type="PackedScene" id=11]
[ext_resource path="res://source/interface/game/advancement/AdvancementDialogue.tscn" type="PackedScene" id=12]
[ext_resource path="res://source/interface/game/recall/RecallDialogue.tscn" type="PackedScene" id=13]
[ext_resource path="res://source/interface/game/InfoDialogue.tscn" type="PackedScene" id=14]

[sub_resource type="TileSet" id=1]
0/name = "darken"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 72, 72 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="GameUI" type="CanvasLayer" groups=[
"GameUI",
]]
follow_viewport_enable = true
script = ExtResource( 1 )

[node name="PathUI" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Cover" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 54, 72 )
cell_quadrant_size = 32
cell_half_offset = 4
cell_tile_origin = 1
format = 1

[node name="UnitPlateContainer" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActionDialogue" parent="." instance=ExtResource( 11 )]

[node name="PopupLabelContainer" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector" parent="." instance=ExtResource( 2 )]

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2

[node name="TopPanel" type="PanelContainer" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -500.0
margin_right = 500.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SideUI" parent="HUD/TopPanel" instance=ExtResource( 7 )]
margin_left = 7.0
margin_top = 7.0
margin_right = 993.0
margin_bottom = 47.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="CombatDialogue" parent="HUD" instance=ExtResource( 5 )]

[node name="RecallDialogue" parent="HUD" instance=ExtResource( 13 )]
margin_top = 0.0
margin_bottom = 0.0

[node name="RecruitDialogue" parent="HUD" instance=ExtResource( 8 )]
margin_top = 0.0
margin_bottom = 0.0

[node name="AdvancementDialogue" parent="HUD" instance=ExtResource( 12 )]
margin_top = -2.0
margin_bottom = -2.0
theme = null

[node name="InfoDialogue" parent="HUD" instance=ExtResource( 14 )]

[node name="SidePanel" type="PanelContainer" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -245.0
margin_top = 200.0
margin_right = -5.0
margin_bottom = -280.0
rect_min_size = Vector2( 240, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/SidePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 233.0
margin_bottom = 593.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LocationUI" parent="HUD/SidePanel/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 226.0
margin_bottom = 122.0
mouse_filter = 2

[node name="UnitUI" parent="HUD/SidePanel/VBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 126.0
margin_right = 226.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="ToDWidget" parent="HUD" instance=ExtResource( 10 )]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -135.0
margin_top = 10.0
margin_right = -5.0

[node name="EndTurn" type="Button" parent="HUD"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -231.0
margin_top = -85.0
margin_right = -5.0
margin_bottom = -5.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
enabled_focus_mode = 0
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="HUD"]
margin_right = 226.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
focus_mode = 0
enabled_focus_mode = 0
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="move_selected" from="ActionDialogue" to="." method="_on_ActionDialogue_move_selected"]
[connection signal="recall_selected" from="ActionDialogue" to="." method="_on_ActionDialogue_recall_selected"]
[connection signal="recruit_selected" from="ActionDialogue" to="." method="_on_ActionDialogue_recruit_selected"]
[connection signal="skill_selected" from="ActionDialogue" to="." method="_on_ActionDialogue_skill_selected"]
[connection signal="cancelled" from="HUD/CombatDialogue" to="." method="_on_CombatDialogue_cancelled"]
[connection signal="option_selected" from="HUD/CombatDialogue" to="." method="_on_CombatDialogue_option_selected"]
[connection signal="cancelled" from="HUD/RecallDialogue" to="." method="_on_RecallDialogue_cancelled"]
[connection signal="option_selected" from="HUD/RecallDialogue" to="." method="_on_RecallDialogue_option_selected"]
[connection signal="cancelled" from="HUD/RecruitDialogue" to="." method="_on_RecruitDialogue_cancelled"]
[connection signal="option_selected" from="HUD/RecruitDialogue" to="." method="_on_RecruitDialogue_option_selected"]
[connection signal="skill_selected" from="HUD/SidePanel/VBoxContainer/UnitUI" to="." method="_on_UnitUI_skill_selected"]
[connection signal="pressed" from="HUD/EndTurn" to="." method="_on_EndTurn_pressed"]
[connection signal="pressed" from="HUD/ExitButton" to="." method="_on_ExitButton_pressed"]
